# cpp_neural_network_training_pipeline

./: .gitignore  CMakeLists.txt  README.md
include/: CIFAR10Loader.hpp  CustomDataset.hpp  ModelTrainer.hpp  MongoManager.hpp  rest_client.hpp
libs/: ModelTrainer.cpp  MongoManager.cpp  rest_client.cpp
src/: main.cpp
